# spadaLibreria

./: .eslintignore  .gitignore  ARCHITECTURE.md  CONSISTENCY_ANALYSIS.md  README.md  database.db  database.py  extracteur_string.py  gui.py  main.py  next.config.js  package-lock.json  package.json  pyproject.toml  specification techniques.md  start.sh  tailwind.config.js  tsconfig.tsbuildinfo
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md  remediation-summary.md
analysed/: CHECKLIST.md  README.md  implementation_reference.sh  unused-files-analysis.md
data/: glossary.yaml
data/treatises/: achille_marozzo_opera_nova_livre2.yaml  antonio_manciolino_opera_nova_livre4.yaml  example_marozzo_opera_nova_livre2.yaml  marozzo_opera_nova.yaml
docs/: SEARCH_REGEX_GUIDE.md  SEARCH_REGEX_GUIDE_EN.md
scripts/: README.md  extract-first-line.js  extract_book.py  extract_marozzo.py  ragu_alla_bolognese.js  refactor_glossary.py  yaml_annotate.py
spadalibreria/: .gitignore  README.md  eslint.config.mjs  jest.config.js  package-lock.json  package.json  setupTests.js
spadalibreria/data/: glossary.yaml  glossary.yaml.backup
specs/001-localstorage-utility/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-treatise-search-annotations/: CODEBASE_ANALYSIS.md  plan.md  research.md  spec.md  tasks.md
specs/002-annotation-class-refactor/: IMPLEMENTATION_SUMMARY.md  plan.md  spec.md  tasks.md
src/: app.py  database.py
src/app/: layout.tsx  page.tsx
(+203 files in other folders)
