[project]
name = "spadalibreria"
version = "0.1.0"
description = "Platform for studying Bolognese fencing treatises"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "pdfplumber>=0.11.8",
    "pyyaml>=6.0.2",
]

[project.scripts]
extract-marozzo = "scripts.extract_marozzo:main"
