[project]
name = "spadalibreria"
version = "0.1.0"
description = "Platform for studying Bolognese fencing treatises"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "pdfplumber>=0.11.8",
    "ruamel-yaml>=0.18.16",
]

[project.scripts]
extract-book = "scripts.extract_book:main"
yaml-annotate = "scripts.yaml_annotate:main"
